--- a/AnkiDroid/build.gradle
+++ b/AnkiDroid/build.gradle
@@ -238,6 +238,7 @@ dependencies {
         }
     }
 
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
     lintChecks project(":lint-rules")
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
